run from build folder

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "app for training your js skilld",
   "main": "index.js",
   "scripts": {
-    "start": "npm run less && npm run highlights && npm run serve",
+    "start": "npm run less && npm run highlights && npm run pug && npm run jsmin && npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "less": "lessc index.less build/atom-dark-syntax.css",
-    "serve": "browser-sync start --server",
+    "serve": "browser-sync start --config 'bs-config.js'",
+    "pug": "pug src/index.pug -o build",
+    "jsmin": "uglifyjs src/main.js -o build/main.min.js",
     "highlights": "concurrently \"npm run highlights1\" \"npm run highlights2\" \"npm run highlights3\" ",
     "highlights1": "highlights exercises/hoisting/1.js -o build/1.html",
     "highlights2": "highlights exercises/hoisting/2.js -o build/2.html",
