--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "gulp": "^3.9.1",
     "gulp-less": "^3.1.0",
     "gulp-load-plugins": "^1.3.0",
+    "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0",
     "highlights": "^1.4.1",
     "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.16.0",
     "browser-sync": "^2.16.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^2.1.1"
   }
 }
