--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-gh-pages": "^0.5.4",
     "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^2.1.1"
+    "gulp-sourcemaps": "^2.1.1",
+    "mkdirp": "^0.5.1"
   }
 }
