Separate build & dev

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "npm run highlights",
     "poststart": "gulp",
+    "dev": "gulp dev",
+    "build": "gulp build",
+    "deploy": "gulp deploy",
     "test": "echo \"Error: no test specified\" && exit 1",
     "highlights": "concurrently \"npm run highlights1\" \"npm run highlights2\" \"npm run highlights3\" ",
     "highlights1": "highlights exercises/hoisting/1.js -o build/1.html",
