--- a/package.json
+++ b/package.json
@@ -2,18 +2,13 @@
   "name": "js-exercises",
   "version": "1.0.0",
   "description": "app for training your js skills",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
-    "start": "npm run highlights",
-    "poststart": "gulp",
+    "start": "gulp",
     "dev": "gulp dev",
     "build": "gulp build",
     "deploy": "gulp deploy",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "highlights": "concurrently \"npm run highlights1\" \"npm run highlights2\" \"npm run highlights3\" ",
-    "highlights1": "highlights exercises/hoisting/1.js -o build/1.html",
-    "highlights2": "highlights exercises/hoisting/2.js -o build/2.html",
-    "highlights3": "highlights exercises/hoisting/3.js -o build/3.html"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -26,21 +21,26 @@
   },
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
-    "highlights": "^3.0.1"
+    "amdefine": "^1.0.1",
+    "buffer-shims": "^1.0.0",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "highlights": "^3.0.1",
+    "path-dirname": "^1.0.2",
+    "process-nextick-args": "^1.0.7",
+    "util-deprecate": "^1.0.2"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
     "browser-sync": "^2.18.12",
     "del": "^3.0.0",
-    "gulp": "github:gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^2.6.0",
     "gulp-less": "^3.3.2",
     "gulp-load-plugins": "^1.3.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
     "mkdirp": "^0.5.1",
     "prismjs": "^1.6.0"
