--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
+# User-specific stuff:
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/dictionaries
+
 node_modules/
 bower_components/
 *.log
@@ -6,6 +14,5 @@ build/
 dist/
 .tmp/
 
-.idea/
-
+# macOS specific files
 .DS_store
