--- a/package.json
+++ b/package.json
@@ -22,18 +22,13 @@
   },
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
-    "amdefine": "^1.0.1",
-    "buffer-shims": "^1.0.0",
-    "cors": "^2.8.3",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "highlights": "^3.0.1",
-    "path-dirname": "^1.0.2",
-    "process-nextick-args": "^1.0.7",
-    "util-deprecate": "^1.0.2"
+    "gulp": "github:gulpjs/gulp#4.0"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.16.0",
-    "browser-sync": "^2.18.12",
+    "babel-cli": "~6.26.0",
+    "babel-preset-env": "~1.6.1",
+    "babel-register": "~6.26.0",
+    "browser-sync": "~2.18.13",
     "del": "^3.0.0",
     "gulp-babel": "^6.1.2",
     "gulp-gh-pages": "^0.5.4",
@@ -42,9 +37,8 @@
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.6.0",
+    "gulp-sourcemaps": "~2.6.1",
     "gulp-uglify": "^3.0.0",
-    "mkdirp": "^0.5.1",
     "prismjs": "^1.6.0"
   }
 }
