--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "app for training your js skills",
   "main": "src/main.js",
   "scripts": {
-    "preinstall": "node server/transformFilesToStrings.js",
-    "start": "gulp dev",
-    "dev": "gulp dev",
-    "build": "gulp build",
+    "start": "npm run dev",
+    "dev": "gulp dev && node server/transformFilesToStrings.js ./tmp",
+    "build": "gulp prod && node server/transformFilesToStrings.js dist",
     "clean": "gulp clean",
-    "deploy": "gulp deploy",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,15 +30,15 @@
     "babel-register": "~6.26.0",
     "browser-sync": "~2.18.13",
     "del": "^3.0.0",
+    "gh-pages": "~1.1.0",
     "gulp-babel": "^6.1.2",
-    "gulp-gh-pages": "^0.5.4",
+    "gulp-babel-minify": "~0.2.0",
     "gulp-less": "^3.3.2",
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "~2.6.1",
-    "gulp-uglify": "^3.0.0",
     "prismjs": "^1.6.0"
   }
 }
