Add prism style sheets

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "JS exercies",
-    "name": "JavaScript exercises",
+    "short_name": "JS Quiz",
+    "name": "JavaScript Quiz",
     "background_color": "#002b36",
     "display": "standalone",
     "theme_color": "#002b36"
