--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
+    "bootstrap": "~4.0.0-beta.2",
     "gulp": "github:gulpjs/gulp#4.0"
   },
   "devDependencies": {
