--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "gulp dev && node server/transformFilesToStrings.js .tmp",
+    "jsdev": "webpack",
     "build": "gulp prod && node server/transformFilesToStrings.js dist",
     "clean": "gulp clean",
     "deploy": "gh-pages -d dist",
+    "lint": "eslint src/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -31,6 +33,8 @@
     "babel-register": "~6.26.0",
     "browser-sync": "~2.18.13",
     "del": "^3.0.0",
+    "eslint-config-airbnb-base": "~12.1.0",
+    "eslint-plugin-import": "~2.8.0",
     "gh-pages": "~1.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-babel-minify": "~0.2.0",
@@ -40,6 +44,7 @@
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "~2.6.1",
-    "prismjs": "^1.6.0"
+    "prismjs": "^1.6.0",
+    "webpack": "~3.10.0"
   }
 }
