--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "gulp dev && node server/transformFilesToStrings.js .tmp",
-    "jsdev": "webpack",
+    "devJs": "webpack-dev-server --open --config webpack.dev.js",
     "build": "gulp prod && node server/transformFilesToStrings.js dist",
+    "buildJs": "webpack webpack --config webpack.prod.js",
     "clean": "gulp clean",
     "deploy": "gh-pages -d dist",
     "lint": "eslint src/*.js",
@@ -29,9 +30,11 @@
   },
   "devDependencies": {
     "babel-cli": "~6.26.0",
+    "babel-minify-webpack-plugin": "~0.2.0",
     "babel-preset-env": "~1.6.1",
     "babel-register": "~6.26.0",
     "browser-sync": "~2.18.13",
+    "clean-webpack-plugin": "~0.1.17",
     "del": "^3.0.0",
     "eslint-config-airbnb-base": "~12.1.0",
     "eslint-plugin-import": "~2.8.0",
@@ -45,6 +48,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "~2.6.1",
     "prismjs": "^1.6.0",
-    "webpack": "~3.10.0"
+    "webpack": "~3.10.0",
+    "webpack-dev-server": "~2.9.7",
+    "webpack-merge": "~4.1.1"
   }
 }
