Add questions to repository

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "src/main.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "node server/transformFilesToStrings.js .tmp && gulp dev",
+    "dev": "gulp dev",
     "devJs": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "gulp prod && node server/transformFilesToStrings.js dist",
+    "build": "gulp prod",
     "buildJs": "webpack webpack --config webpack.prod.js",
+    "questions-to-array": "node server/transformFilesToStrings.js ./",
     "clean": "trash .tmp/ dist/ .publish",
     "deploy": "gh-pages -d dist",
     "lint": "eslint src/*.js",
@@ -38,8 +39,6 @@
     "eslint-config-airbnb-base": "~12.1.0",
     "eslint-plugin-import": "~2.8.0",
     "gh-pages": "~1.1.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-babel-minify": "~0.2.0",
     "gulp-less": "^3.3.2",
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
