--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "trash-cli": "~1.4.0",
     "webpack": "~3.10.0",
     "webpack-dev-server": "~2.9.7",
-    "webpack-merge": "~4.1.1"
+    "webpack-merge": "~4.1.1",
+    "webpack-stream": "~4.0.0"
   }
 }
