ESLint 63 problems (62 errors, 1 warning)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "gulp dev",
     "devJs": "webpack-dev-server --open --config webpack.dev.js",
     "build": "gulp prod",
-    "buildJs": "webpack webpack --config webpack.prod.js",
     "questions-to-array": "node server/transformFilesToStrings.js ./",
     "clean": "trash .tmp/ dist/ .publish",
     "deploy": "gh-pages -d dist",
@@ -36,6 +35,7 @@
     "babel-register": "~6.26.0",
     "browser-sync": "~2.18.13",
     "clean-webpack-plugin": "~0.1.17",
+    "eslint": "~4.13.1",
     "eslint-config-airbnb-base": "~12.1.0",
     "eslint-plugin-import": "~2.8.0",
     "gh-pages": "~1.1.0",
