--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
     "bootstrap": "~4.0.0-beta.2",
-    "gulp": "github:gulpjs/gulp#4.0"
+    "gulp": "github:gulpjs/gulp#4.0",
+    "prismjs": "~1.9.0"
   },
   "devDependencies": {
     "babel-cli": "~6.26.0",
@@ -45,7 +46,6 @@
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "~2.6.1",
-    "prismjs": "^1.6.0",
     "trash-cli": "~1.4.0",
     "webpack": "~3.10.0",
     "webpack-dev-server": "~2.9.7",
