--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "gulp dev",
     "devJs": "webpack-dev-server --open --config webpack.dev.js",
     "build": "gulp prod",
-    "questions-to-array": "node server/transformFilesToStrings.js ./",
+    "questions-to-array": "node server/transformFilesToStrings.js ./static/questions.js",
     "clean": "trash .tmp/ dist/ .publish",
     "deploy": "gh-pages -d dist",
     "lint": "eslint src/*.js",
