--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-config-airbnb-base": "~12.1.0",
     "eslint-plugin-import": "~2.8.0",
     "gh-pages": "~1.1.0",
+    "gulp-babel-minify": "^0.2.0",
     "gulp-less": "^3.3.2",
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
