Add rect linting

--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "browser-sync": "~2.18.13",
     "clean-webpack-plugin": "~0.1.17",
     "eslint": "~4.13.1",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
-    "eslint-plugin-import": "~2.8.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
     "gh-pages": "~1.1.0",
     "gulp-babel-minify": "^0.2.0",
     "gulp-jsonminify": "^1.0.0",
