--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "~4.0.0-beta.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "prismjs": "~1.9.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "~4.2.0",
