--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
     "prismjs": "~1.9.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router": "~4.2.0",
-    "react-router-dom": "~4.2.2"
+    "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "babel-minify-webpack-plugin": "~0.2.0",
