--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "gulp dev",
+    "dev": "gulp",
     "devJs": "webpack-dev-server --open --config webpack.dev.js",
     "build": "gulp prod",
     "questions-to-array": "node server/transformFilesToStrings.js ./static/questions.js",
@@ -32,17 +32,18 @@
     "@babel/preset-react": "^7.0.0-beta.35",
     "@babel/register": "^7.0.0-beta.35",
     "babel-loader": "^8.0.0-beta.0",
+    "babel-minify-webpack-plugin": "~0.2.0",
     "bootstrap": "~4.0.0-beta.2",
+    "clean-webpack-plugin": "~0.1.17",
     "gulp": "github:gulpjs/gulp#4.0",
     "prismjs": "~1.9.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "webpack": "~3.10.0"
   },
   "devDependencies": {
-    "babel-minify-webpack-plugin": "~0.2.0",
     "browser-sync": "~2.18.13",
-    "clean-webpack-plugin": "~0.1.17",
     "eslint": "~4.13.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
@@ -59,7 +60,6 @@
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "~2.6.1",
     "trash-cli": "~1.4.0",
-    "webpack": "^3.10.0",
     "webpack-dev-server": "~2.9.7",
     "webpack-stream": "~4.0.0"
   }
