--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bootstrap": "~4.0.0-beta.2",
     "clean-webpack-plugin": "~0.1.17",
     "gulp": "github:gulpjs/gulp#4.0",
+    "html-webpack-plugin": "~2.30.1",
     "prismjs": "~1.9.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
@@ -59,6 +60,7 @@
     "gulp-pug": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "~2.6.1",
+    "script-ext-html-webpack-plugin": "~1.8.8",
     "trash-cli": "~1.4.0",
     "webpack-dev-server": "~2.9.7",
     "webpack-stream": "~4.0.0"
