improve node script

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "recursive-readdir": "~2.2.1",
     "webpack": "~3.10.0"
   },
   "devDependencies": {
