--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-exercises",
-  "version": "3.0.0-0",
+  "version": "3.0.0",
   "description": "javascript skills training app",
   "main": "src/main.js",
   "scripts": {
