--- a/package.json
+++ b/package.json
@@ -63,6 +63,13 @@
     "script-ext-html-webpack-plugin": "~1.8.8",
     "trash-cli": "~1.4.0",
     "webpack-dev-server": "~2.9.7",
-    "webpack-stream": "~4.0.0"
-  }
+    "webpack-stream": "~4.0.0",
+    "workbox-webpack-plugin": "^2.1.2"
+  },
+  "keywords": [
+    "js",
+    "quiz",
+    "javascript",
+    "quiz"
+  ]
 }
