--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "~2.6.1",
+    "gulp-sourcemaps": "^2.6.2",
     "script-ext-html-webpack-plugin": "~1.8.8",
     "trash-cli": "~1.4.0",
     "webpack-dev-server": "~2.9.7",
