--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/register": "^7.0.0-beta.35",
     "babel-loader": "^8.0.0-beta.0",
     "babel-minify-webpack-plugin": "~0.2.0",
+    "babel-plugin-react-css-modules": "^3.3.2",
     "bootstrap": "~4.0.0-beta.2",
     "clean-webpack-plugin": "~0.1.17",
     "gulp": "github:gulpjs/gulp#4.0",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "browser-sync": "~2.18.13",
+    "css-loader": "^0.28.7",
     "eslint": "~4.13.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
@@ -55,12 +57,12 @@
     "gh-pages": "~1.1.0",
     "gulp-babel-minify": "^0.2.0",
     "gulp-jsonminify": "^1.0.0",
-    "gulp-less": "^3.3.2",
     "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.2",
     "script-ext-html-webpack-plugin": "~1.8.8",
+    "style-loader": "^0.19.1",
     "trash-cli": "~1.4.0",
     "webpack-dev-server": "~2.9.7",
     "webpack-stream": "~4.0.0",
