--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "gulp",
-    "devJs": "webpack-dev-server --open --config webpack.dev.js",
+    "dev": "gulp & webpack-dev-server --open --config webpack.dev.js",
     "build": "gulp prod",
     "questions-to-array": "node server/transformFilesToStrings.js ./static/questions.js",
     "clean": "trash .tmp/ dist/ .publish",
@@ -33,8 +32,8 @@
     "@babel/register": "^7.0.0-beta.35",
     "babel-loader": "^8.0.0-beta.0",
     "babel-minify-webpack-plugin": "~0.2.0",
-    "babel-plugin-react-css-modules": "^3.3.2",
     "bootstrap": "~4.0.0-beta.2",
+    "classnames": "~2.2.5",
     "clean-webpack-plugin": "~0.1.17",
     "gulp": "github:gulpjs/gulp#4.0",
     "html-webpack-plugin": "~2.30.1",
@@ -57,9 +56,7 @@
     "gh-pages": "~1.1.0",
     "gulp-babel-minify": "^0.2.0",
     "gulp-jsonminify": "^1.0.0",
-    "gulp-load-plugins": "^1.3.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.2",
     "script-ext-html-webpack-plugin": "~1.8.8",
     "style-loader": "^0.19.1",
@@ -69,9 +66,7 @@
     "workbox-webpack-plugin": "^2.1.2"
   },
   "keywords": [
-    "js",
     "quiz",
-    "javascript",
-    "quiz"
+    "quizzes"
   ]
 }
