remove unused functions

--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,7 @@
     "@babel/preset-react",
     "@babel/preset-env"
   ],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
