--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/main.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "gulp & webpack-dev-server --open --config webpack.dev.js",
+    "dev": "gulp & webpack-dev-server --open --config webpack.dev.babel.js",
     "build": "gulp prod",
+    "buildJs": "webpack --config webpack.prod.babel.js",
     "questions-to-array": "node server/transformFilesToStrings.js ./static/questions.js",
     "clean": "trash .tmp/ dist/ .publish",
     "deploy": "gh-pages -d dist",
@@ -24,12 +25,12 @@
   },
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
-    "@babel/cli": "^7.0.0-beta.35",
-    "@babel/core": "^7.0.0-beta.35",
-    "@babel/plugin-proposal-class-properties": "~7.0.0-beta.35",
-    "@babel/preset-env": "^7.0.0-beta.35",
-    "@babel/preset-react": "^7.0.0-beta.35",
-    "@babel/register": "^7.0.0-beta.35",
+    "@babel/cli": "~7.0.0-beta.36",
+    "@babel/core": "~7.0.0-beta.36",
+    "@babel/plugin-proposal-class-properties": "~7.0.0-beta.36",
+    "@babel/preset-env": "~7.0.0-beta.36",
+    "@babel/preset-react": "~7.0.0-beta.36",
+    "@babel/register": "~7.0.0-beta.36",
     "babel-loader": "^8.0.0-beta.0",
     "babel-minify-webpack-plugin": "~0.2.0",
     "bootstrap": "~4.0.0-beta.2",
