--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main.js",
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.babel.js",
-    "build": "gulp prod && webpack --config webpack.prod.babel.js",
+    "build": "gulp && webpack --config webpack.prod.babel.js",
     "questions-to-array": "node server/transformFilesToStrings.js ./static/questions.js",
     "clean": "trash .tmp/ dist/ .publish",
     "deploy": "gh-pages -d dist",
@@ -44,7 +44,6 @@
     "webpack": "~3.10.0"
   },
   "devDependencies": {
-    "browser-sync": "~2.18.13",
     "copy-webpack-plugin": "~4.3.1",
     "css-loader": "^0.28.7",
     "eslint": "~4.14.0",
@@ -54,7 +53,6 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "gh-pages": "~1.1.0",
-    "gulp-babel-minify": "^0.2.0",
     "gulp-jsonminify": "^1.0.0",
     "script-ext-html-webpack-plugin": "~1.8.8",
     "style-loader": "^0.19.1",
