--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
+    "extract-text-webpack-plugin": "~3.0.2",
     "gh-pages": "~1.1.0",
     "gulp-jsonminify": "^1.0.0",
     "script-ext-html-webpack-plugin": "~1.8.8",
