--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "extract-text-webpack-plugin": "~3.0.2",
     "gh-pages": "~1.1.0",
     "gulp-jsonminify": "^1.0.0",
+    "jest": "^22.0.4",
+    "react-test-renderer": "^16.2.0",
     "script-ext-html-webpack-plugin": "~1.8.8",
     "style-loader": "^0.19.1",
     "trash-cli": "~1.4.0",
