--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "babel-core": "~7.0.0-bridge.0",
     "babel-jest": "~22.0.4",
     "copy-webpack-plugin": "~4.3.1",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.8",
     "eslint": "~4.14.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
@@ -63,7 +63,7 @@
     "script-ext-html-webpack-plugin": "~1.8.8",
     "style-loader": "^0.19.1",
     "trash-cli": "~1.4.0",
-    "webpack-dev-server": "~2.9.7",
+    "webpack-dev-server": "^2.10.0",
     "workbox-webpack-plugin": "^2.1.2"
   },
   "keywords": [
