--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   },
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
-    "@babel/cli": "~7.0.0-beta.36",
-    "@babel/plugin-proposal-class-properties": "~7.0.0-beta.36",
-    "@babel/preset-env": "~7.0.0-beta.36",
-    "@babel/preset-react": "~7.0.0-beta.36",
-    "@babel/register": "~7.0.0-beta.36",
+    "@babel/cli": "~7.0.0-beta.37",
+    "@babel/plugin-proposal-class-properties": "~7.0.0-beta.37",
+    "@babel/preset-env": "~7.0.0-beta.37",
+    "@babel/preset-react": "~7.0.0-beta.37",
+    "@babel/register": "~7.0.0-beta.37",
     "babel-loader": "^8.0.0-beta.0",
     "babel-minify-webpack-plugin": "~0.2.0",
     "bootstrap": "~4.0.0-beta.3",
@@ -43,7 +43,7 @@
     "webpack": "~3.10.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.0.0-beta.36",
+    "@babel/core": "~7.0.0-beta.37",
     "babel-core": "~7.0.0-bridge.0",
     "babel-jest": "~22.0.4",
     "copy-webpack-plugin": "~4.3.1",
@@ -56,7 +56,7 @@
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "~3.0.2",
     "gh-pages": "~1.1.0",
-    "gulp-jsonminify": "^1.0.0",
+    "gulp-jsonminify": "~1.1.0",
     "jest": "^22.0.4",
     "react-test-renderer": "^16.2.0",
     "regenerator-runtime": "~0.11.1",
