--- a/package.json
+++ b/package.json
@@ -23,29 +23,26 @@
   },
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
-    "@babel/cli": "~7.0.0-beta.37",
-    "@babel/plugin-proposal-class-properties": "~7.0.0-beta.37",
-    "@babel/preset-env": "~7.0.0-beta.37",
-    "@babel/preset-react": "~7.0.0-beta.37",
-    "@babel/register": "~7.0.0-beta.37",
-    "babel-loader": "^8.0.0-beta.0",
-    "babel-minify-webpack-plugin": "~0.2.0",
     "bootstrap": "~4.0.0-beta.3",
     "classnames": "~2.2.5",
-    "clean-webpack-plugin": "~0.1.17",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "html-webpack-plugin": "~2.30.1",
     "prismjs": "~1.10.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "recursive-readdir": "~2.2.1",
-    "webpack": "~3.10.0"
+    "recursive-readdir": "~2.2.1"
   },
   "devDependencies": {
+    "@babel/cli": "~7.0.0-beta.38",
     "@babel/core": "~7.0.0-beta.37",
+    "@babel/plugin-proposal-class-properties": "~7.0.0-beta.38",
+    "@babel/preset-env": "~7.0.0-beta.38",
+    "@babel/preset-react": "~7.0.0-beta.38",
+    "@babel/register": "~7.0.0-beta.38",
     "babel-core": "~7.0.0-bridge.0",
     "babel-jest": "~22.1.0",
+    "babel-loader": "~8.0.0-beta.0",
+    "babel-minify-webpack-plugin": "~0.2.0",
+    "clean-webpack-plugin": "~0.1.17",
     "copy-webpack-plugin": "~4.3.1",
     "css-loader": "^0.28.8",
     "eslint": "~4.15.0",
@@ -56,13 +53,16 @@
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "~3.0.2",
     "gh-pages": "~1.1.0",
+    "gulp": "~4.0.0",
     "gulp-jsonminify": "~1.1.0",
+    "html-webpack-plugin": "~2.30.1",
     "jest": "~22.1.2",
     "react-test-renderer": "^16.2.0",
     "regenerator-runtime": "~0.11.1",
     "script-ext-html-webpack-plugin": "~1.8.8",
     "style-loader": "^0.19.1",
     "trash-cli": "~1.4.0",
+    "webpack": "~3.10.0",
     "webpack-dev-server": "~2.11.0",
     "workbox-webpack-plugin": "^2.1.2"
   },
