change license in package

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/pure-js/js-exercises.git"
   },
   "author": "pure-js",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/pure-js/js-exercises/issues"
   },
