--- a/package.json
+++ b/package.json
@@ -56,14 +56,14 @@
     "gulp": "~4.0.0",
     "gulp-jsonminify": "~1.1.0",
     "html-webpack-plugin": "~2.30.1",
-    "jest": "~22.1.2",
+    "jest": "^22.1.4",
     "react-test-renderer": "^16.2.0",
     "regenerator-runtime": "~0.11.1",
     "script-ext-html-webpack-plugin": "~1.8.8",
     "style-loader": "^0.19.1",
     "trash-cli": "~1.4.0",
     "webpack": "~3.10.0",
-    "webpack-dev-server": "~2.11.0",
+    "webpack-dev-server": "^2.11.1",
     "workbox-webpack-plugin": "^2.1.2"
   },
   "keywords": [
