--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "babel-jest": "~22.1.0",
     "babel-loader": "~8.0.0-beta.0",
     "babel-minify-webpack-plugin": "~0.2.0",
-    "clean-webpack-plugin": "~0.1.17",
+    "clean-webpack-plugin": "^0.1.18",
     "copy-webpack-plugin": "~4.3.1",
     "css-loader": "~0.28.9",
     "eslint": "~4.16.0",
