--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint-config-airbnb-base": "~12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.6.0",
+    "eslint-plugin-react": "~7.6.1",
     "extract-text-webpack-plugin": "~3.0.2",
     "gh-pages": "~1.1.0",
     "gulp": "~4.0.0",
