--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "questions-to-array": "node utility/transformFilesToStrings.js ./static/questions.js",
     "clean": "trash .tmp/ dist/ .publish",
     "deploy": "npm run build && gh-pages -d dist",
-    "lint": "eslint src/*.js",
+    "lint": "eslint src/**/*.jsx",
     "test": "jest"
   },
   "repository": {
@@ -34,7 +34,6 @@
   "devDependencies": {
     "@babel/cli": "~7.0.0-beta.39",
     "@babel/core": "~7.0.0-beta.39",
-    "@babel/plugin-proposal-class-properties": "~7.0.0-beta.39",
     "@babel/preset-env": "~7.0.0-beta.39",
     "@babel/preset-react": "~7.0.0-beta.39",
     "@babel/register": "~7.0.0-beta.39",
