--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "recursive-readdir": "~2.2.1"
   },
   "devDependencies": {
-    "@babel/cli": "~7.0.0-beta.39",
-    "@babel/core": "~7.0.0-beta.39",
-    "@babel/preset-env": "~7.0.0-beta.39",
-    "@babel/preset-react": "~7.0.0-beta.39",
-    "@babel/register": "~7.0.0-beta.39",
+    "@babel/cli": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/preset-env": "^7.0.0-beta.40",
+    "@babel/preset-react": "^7.0.0-beta.40",
+    "@babel/register": "^7.0.0-beta.40",
     "babel-core": "~7.0.0-bridge.0",
     "babel-jest": "~22.4.0",
     "babel-loader": "~8.0.0-beta.0",
@@ -55,11 +55,11 @@
     "gulp": "~4.0.0",
     "gulp-jsonminify": "~1.1.0",
     "html-webpack-plugin": "~2.30.1",
-    "jest": "^22.1.4",
+    "jest": "^22.4.0",
     "react-test-renderer": "^16.2.0",
     "regenerator-runtime": "~0.11.1",
     "script-ext-html-webpack-plugin": "~1.8.8",
-    "style-loader": "^0.20.0",
+    "style-loader": "^0.20.2",
     "trash-cli": "~1.4.0",
     "webpack": "~3.11.0",
     "webpack-dev-server": "^2.11.1",
