--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "recursive-readdir": "~2.2.1"
+    "recursive-readdir": "^2.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.40",
@@ -38,16 +38,16 @@
     "@babel/preset-react": "^7.0.0-beta.40",
     "@babel/register": "^7.0.0-beta.40",
     "babel-core": "~7.0.0-bridge.0",
-    "babel-jest": "~22.4.0",
-    "babel-loader": "~8.0.0-beta.0",
+    "babel-jest": "^22.4.1",
+    "babel-loader": "^8.0.0-beta.2",
     "babel-minify-webpack-plugin": "~0.3.0",
     "clean-webpack-plugin": "^0.1.18",
-    "copy-webpack-plugin": "~4.4.0",
-    "css-loader": "~0.28.9",
+    "copy-webpack-plugin": "^4.4.2",
+    "css-loader": "^0.28.10",
     "eslint": "~4.18.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "~7.7.0",
     "extract-text-webpack-plugin": "~3.0.2",
@@ -55,14 +55,14 @@
     "gulp": "~4.0.0",
     "gulp-jsonminify": "~1.1.0",
     "html-webpack-plugin": "~2.30.1",
-    "jest": "^22.4.0",
+    "jest": "^22.4.2",
     "react-test-renderer": "^16.2.0",
     "regenerator-runtime": "~0.11.1",
     "script-ext-html-webpack-plugin": "~1.8.8",
     "style-loader": "^0.20.2",
     "trash-cli": "~1.4.0",
     "webpack": "~4.0.0",
-    "webpack-dev-server": "^2.11.1",
+    "webpack-dev-server": "^3.0.0",
     "workbox-webpack-plugin": "^2.1.2"
   },
   "keywords": [
