--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "~7.7.0",
-    "extract-text-webpack-plugin": "~3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "gh-pages": "~1.1.0",
     "gulp": "~4.0.0",
     "gulp-jsonminify": "~1.1.0",
-    "html-webpack-plugin": "~2.30.1",
+    "html-webpack-plugin": "github:webpack-contrib/html-webpack-plugin",
     "jest": "^22.4.2",
     "react-test-renderer": "^16.2.0",
     "regenerator-runtime": "~0.11.1",
@@ -62,6 +62,7 @@
     "style-loader": "^0.20.2",
     "trash-cli": "~1.4.0",
     "webpack": "~4.0.0",
+    "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.0.0",
     "workbox-webpack-plugin": "^2.1.2"
   },
