--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "bootstrap": "~4.0.0",
     "classnames": "~2.2.5",
     "prismjs": "~1.12.0",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "recursive-readdir": "^2.2.2"
@@ -41,20 +41,20 @@
     "babel-jest": "^22.4.1",
     "babel-loader": "^8.0.0-beta.2",
     "babel-minify-webpack-plugin": "~0.3.0",
-    "clean-webpack-plugin": "^0.1.18",
-    "copy-webpack-plugin": "^4.4.2",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
-    "eslint": "~4.18.0",
+    "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "~7.7.0",
-    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gh-pages": "~1.1.0",
     "gulp": "~4.0.0",
     "gulp-jsonminify": "~1.1.0",
-    "html-webpack-plugin": "github:webpack-contrib/html-webpack-plugin",
+    "html-webpack-plugin": "^3.0.6",
     "jest": "^22.4.2",
     "react-test-renderer": "^16.2.0",
     "regenerator-runtime": "~0.11.1",
@@ -62,9 +62,9 @@
     "style-loader": "^0.20.2",
     "trash-cli": "~1.4.0",
     "webpack": "~4.1.0",
-    "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.0.0",
-    "workbox-webpack-plugin": "^2.1.2"
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0",
+    "workbox-webpack-plugin": "^2.1.3"
   },
   "keywords": [
     "quiz",
