--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "bootstrap": "~4.0.0",
     "classnames": "~2.2.5",
-    "prismjs": "~1.12.0",
+    "prismjs": "^1.12.2",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -42,7 +42,7 @@
     "babel-loader": "^8.0.0-beta.2",
     "babel-minify-webpack-plugin": "~0.3.0",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.0",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
@@ -58,13 +58,13 @@
     "jest": "^22.4.2",
     "react-test-renderer": "^16.2.0",
     "regenerator-runtime": "~0.11.1",
-    "script-ext-html-webpack-plugin": "~1.8.8",
-    "style-loader": "^0.20.2",
+    "script-ext-html-webpack-plugin": "^2.0.1",
+    "style-loader": "^0.20.3",
     "trash-cli": "~1.4.0",
     "webpack": "~4.1.0",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0",
-    "workbox-webpack-plugin": "^2.1.3"
+    "webpack-cli": "^2.0.11",
+    "webpack-dev-server": "^3.1.1",
+    "workbox-webpack-plugin": "^3.0.0"
   },
   "keywords": [
     "quiz",
