--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
     "recursive-readdir": "^2.2.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.40",
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/preset-env": "^7.0.0-beta.40",
-    "@babel/preset-react": "^7.0.0-beta.40",
-    "@babel/register": "^7.0.0-beta.40",
+    "@babel/cli": "^7.0.0-beta.42",
+    "@babel/core": "^7.0.0-beta.42",
+    "@babel/preset-env": "^7.0.0-beta.42",
+    "@babel/preset-react": "^7.0.0-beta.42",
+    "@babel/register": "^7.0.0-beta.42",
     "babel-core": "~7.0.0-bridge.0",
     "babel-jest": "^22.4.1",
     "babel-loader": "^8.0.0-beta.2",
-    "babel-minify-webpack-plugin": "~0.3.0",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.10",
-    "eslint": "^4.18.2",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
     "eslint-plugin-import": "^2.9.0",
@@ -54,7 +54,7 @@
     "gh-pages": "~1.1.0",
     "gulp": "~4.0.0",
     "gulp-jsonminify": "~1.1.0",
-    "html-webpack-plugin": "^3.0.6",
+    "html-webpack-plugin": "^3.0.7",
     "jest": "^22.4.2",
     "react-test-renderer": "^16.2.0",
     "regenerator-runtime": "~0.11.1",
