--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "bootstrap": "~4.0.0",
     "classnames": "~2.2.5",
-    "prismjs": "^1.12.2",
+    "prismjs": "^1.13.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -38,13 +38,13 @@
     "@babel/preset-react": "^7.0.0-beta.42",
     "@babel/register": "^7.0.0-beta.42",
     "babel-core": "~7.0.0-bridge.0",
-    "babel-jest": "^22.4.1",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^8.0.0-beta.2",
     "babel-minify-webpack-plugin": "^0.3.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
-    "eslint": "^4.19.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
     "eslint-plugin-import": "^2.9.0",
@@ -55,13 +55,13 @@
     "gulp": "~4.0.0",
     "gulp-jsonminify": "~1.1.0",
     "html-webpack-plugin": "^3.0.7",
-    "jest": "^22.4.2",
+    "jest": "^22.4.3",
     "react-test-renderer": "^16.2.0",
     "regenerator-runtime": "~0.11.1",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "style-loader": "^0.20.3",
     "trash-cli": "~1.4.0",
-    "webpack": "~4.1.0",
+    "webpack": "^4.2.0",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1",
     "workbox-webpack-plugin": "^2.1.3"
