--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.jsx",
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.babel.js",
-    "build": "webpack --config webpack.prod.babel.js && gulp",
+    "build": "webpack --config webpack.prod.babel.js",
     "questions-to-array": "node utility/transformFilesToStrings.js ./static/questions.js",
     "clean": "trash .tmp/ dist/ .publish",
     "deploy": "npm run build && gh-pages -d dist",
@@ -52,8 +52,6 @@
     "eslint-plugin-react": "~7.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gh-pages": "~1.1.0",
-    "gulp": "~4.0.0",
-    "gulp-jsonminify": "~1.1.0",
     "html-webpack-plugin": "^3.1.0",
     "jest": "^22.4.3",
     "react-test-renderer": "^16.2.0",
