--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.babel.js",
     "build": "webpack --config webpack.prod.babel.js",
-    "questions-to-array": "node utility/transformFilesToStrings.js ./static/questions.js",
     "clean": "trash .tmp/ dist/ .publish",
     "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint src/**/*.jsx",
@@ -28,8 +27,7 @@
     "prismjs": "^1.13.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0",
-    "recursive-readdir": "^2.2.2"
+    "react-dom": "^16.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.42",
