--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "prismjs": "^1.13.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react-dom": "^16.3.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.43",
@@ -54,6 +56,7 @@
     "html-webpack-plugin": "^3.1.0",
     "jest": "^22.4.3",
     "react-test-renderer": "^16.3.0",
+    "redux-devtools": "^3.4.1",
     "regenerator-runtime": "~0.11.1",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "style-loader": "^0.20.3",
