--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/cli": "^7.0.0-beta.43",
     "@babel/core": "^7.0.0-beta.43",
     "@babel/preset-env": "^7.0.0-beta.43",
+    "@babel/preset-flow": "^7.0.0-beta.44",
     "@babel/preset-react": "^7.0.0-beta.43",
     "@babel/register": "^7.0.0-beta.43",
     "babel-core": "~7.0.0-bridge.0",
