--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "clean": "trash .tmp/ dist/ .publish",
     "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint src/**/*.jsx",
+    "flow": "flow",
     "test": "jest"
   },
   "repository": {
@@ -53,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "~7.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "flow-bin": "^0.69.0",
     "gh-pages": "~1.1.0",
     "html-webpack-plugin": "^3.1.0",
     "jest": "^22.4.3",
