--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint src/**/*.jsx",
     "flow": "flow",
-    "test": "jest"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -25,21 +26,21 @@
   "dependencies": {
     "bootstrap": "~4.0.0",
     "classnames": "~2.2.5",
-    "firebase": "^4.12.1",
-    "prismjs": "^1.13.0",
+    "firebase": "4.13.1",
+    "prismjs": "1.14.0",
     "prop-types": "^15.6.1",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.44",
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
-    "@babel/preset-flow": "^7.0.0-beta.44",
-    "@babel/preset-react": "^7.0.0-beta.44",
-    "@babel/register": "^7.0.0-beta.44",
+    "@babel/cli": "7.0.0-beta.46",
+    "@babel/core": "7.0.0-beta.46",
+    "@babel/preset-env": "7.0.0-beta.46",
+    "@babel/preset-flow": "7.0.0-beta.46",
+    "@babel/preset-react": "7.0.0-beta.46",
+    "@babel/register": "7.0.0-beta.46",
     "babel-core": "~7.0.0-bridge.0",
     "babel-jest": "^22.4.3",
     "babel-loader": "^8.0.0-beta.2",
@@ -50,7 +51,7 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
-    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-import": "2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "~7.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -58,16 +59,16 @@
     "gh-pages": "~1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
-    "react-test-renderer": "^16.3.1",
+    "react-test-renderer": "16.3.2",
     "redux-devtools": "^3.4.1",
     "regenerator-runtime": "~0.11.1",
     "script-ext-html-webpack-plugin": "^2.0.1",
     "style-loader": "^0.20.3",
     "trash-cli": "~1.4.0",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.15",
     "webpack-dev-server": "^3.1.3",
-    "workbox-webpack-plugin": "^3.0.1"
+    "workbox-webpack-plugin": "3.1.0"
   },
   "keywords": [
     "quiz",
