--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "firebase": "4.13.1",
     "prismjs": "1.14.0",
     "prop-types": "^15.6.1",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
+    "react": "16.4.0",
+    "react-dom": "16.4.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2"
   },
@@ -42,8 +42,8 @@
     "@babel/preset-react": "7.0.0-beta.46",
     "@babel/register": "7.0.0-beta.46",
     "babel-core": "~7.0.0-bridge.0",
-    "babel-jest": "^22.4.3",
-    "babel-loader": "^8.0.0-beta.2",
+    "babel-jest": "22.4.4",
+    "babel-loader": "8.0.0-beta.3",
     "babel-minify-webpack-plugin": "^0.3.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
@@ -51,24 +51,24 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
-    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "~7.7.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "flow-bin": "^0.69.0",
+    "eslint-plugin-react": "7.8.2",
+    "flow-bin": "0.72.0",
     "gh-pages": "~1.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^22.4.3",
+    "jest": "22.4.4",
+    "mini-css-extract-plugin": "0.4.0",
     "react-test-renderer": "16.3.2",
     "redux-devtools": "^3.4.1",
     "regenerator-runtime": "~0.11.1",
     "script-ext-html-webpack-plugin": "^2.0.1",
-    "style-loader": "^0.20.3",
+    "style-loader": "0.21.0",
     "trash-cli": "~1.4.0",
-    "webpack": "4.6.0",
+    "webpack": "4.8.3",
     "webpack-cli": "2.0.15",
-    "webpack-dev-server": "^3.1.3",
-    "workbox-webpack-plugin": "3.1.0"
+    "webpack-dev-server": "3.1.4",
+    "workbox-webpack-plugin": "3.2.0"
   },
   "keywords": [
     "quiz",
