--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/pure-js/js-exercises#readme",
   "dependencies": {
-    "bootstrap": "~4.0.0",
+    "bootstrap": "4.1.1",
     "classnames": "~2.2.5",
-    "firebase": "4.13.1",
+    "firebase": "5.0.3",
     "prismjs": "1.14.0",
     "prop-types": "^15.6.1",
     "react": "16.4.0",
@@ -35,12 +35,12 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.46",
-    "@babel/core": "7.0.0-beta.46",
-    "@babel/preset-env": "7.0.0-beta.46",
-    "@babel/preset-flow": "7.0.0-beta.46",
-    "@babel/preset-react": "7.0.0-beta.46",
-    "@babel/register": "7.0.0-beta.46",
+    "@babel/cli": "7.0.0-beta.47",
+    "@babel/core": "7.0.0-beta.47",
+    "@babel/preset-env": "7.0.0-beta.47",
+    "@babel/preset-flow": "7.0.0-beta.47",
+    "@babel/preset-react": "7.0.0-beta.47",
+    "@babel/register": "7.0.0-beta.47",
     "babel-core": "~7.0.0-bridge.0",
     "babel-jest": "22.4.4",
     "babel-loader": "8.0.0-beta.3",
