reduce bundle size

--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.47",
-    "@babel/core": "7.0.0-beta.47",
-    "@babel/preset-env": "7.0.0-beta.47",
-    "@babel/preset-flow": "7.0.0-beta.47",
-    "@babel/preset-react": "7.0.0-beta.47",
-    "@babel/register": "7.0.0-beta.47",
+    "@babel/cli": "^7.0.0-beta.48",
+    "@babel/core": "^7.0.0-beta.48",
+    "@babel/preset-env": "^7.0.0-beta.48",
+    "@babel/preset-flow": "^7.0.0-beta.48",
+    "@babel/preset-react": "^7.0.0-beta.48",
+    "@babel/register": "^7.0.0-beta.48",
     "babel-core": "~7.0.0-bridge.0",
-    "babel-jest": "22.4.4",
+    "babel-jest": "^23.0.0",
     "babel-loader": "8.0.0-beta.3",
     "babel-minify-webpack-plugin": "^0.3.1",
     "clean-webpack-plugin": "^0.1.19",
@@ -57,9 +57,9 @@
     "flow-bin": "0.72.0",
     "gh-pages": "~1.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "22.4.4",
+    "jest": "^23.0.0",
     "mini-css-extract-plugin": "0.4.0",
-    "react-test-renderer": "16.3.2",
+    "react-test-renderer": "^16.4.0",
     "redux-devtools": "^3.4.1",
     "regenerator-runtime": "~0.11.1",
     "script-ext-html-webpack-plugin": "^2.0.1",
