--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,6 @@
     "@babel/preset-react",
     "@babel/preset-env",
     "@babel/preset-flow"
-  ]
+  ],
+  "plugins": ["@babel/plugin-syntax-dynamic-import"]
 }
