--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "dependencies": {
     "bootstrap": "4.1.1",
     "classnames": "~2.2.5",
-    "firebase": "5.0.3",
+    "firebase": "5.0.4",
     "prismjs": "1.14.0",
     "react": "16.4.0",
     "react-dom": "16.4.0",
     "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
-    "redux": "^3.7.2"
+    "redux": "4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.48",
@@ -55,7 +55,7 @@
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "7.8.2",
-    "flow-bin": "0.72.0",
+    "flow-bin": "0.73.0",
     "gh-pages": "~1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.0.0",
