--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-react": "^7.0.0-beta.48",
     "@babel/register": "^7.0.0-beta.48",
     "babel-core": "~7.0.0-bridge.0",
+    "babel-eslint": "8.2.3",
     "babel-jest": "^23.0.0",
     "babel-loader": "8.0.0-beta.3",
     "babel-minify-webpack-plugin": "^0.3.1",
@@ -52,6 +53,7 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-airbnb-base": "~12.1.0",
+    "eslint-plugin-flowtype": "2.47.1",
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "7.8.2",
