update all dependencies

--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "start": "webpack-dev-server --open --config webpack.dev.babel.js --require @babel/register",
     "build": "webpack --require @babel/register --config webpack.prod.babel.js",
     "deploy": "npm run build && gh-pages -d dist",
-    "lint": "eslint src/**/*.jsx",
+    "lint": "eslint src/**/*.{js,jsx}",
     "flow": "flow",
     "test": "jest --coverage"
   },
   "author": "pure-js",
   "license": "GPL-3.0",
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "classnames": "~2.2.5",
+    "bootstrap": "^4.2.1",
+    "classnames": "^2.2.6",
     "firebase": "^5.8.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-loadable": "^5.4.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-loadable": "^5.5.0",
     "react-syntax-highlighter": "^10.1.2"
   },
   "devDependencies": {
@@ -34,32 +34,32 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.3.1",
-    "babel-eslint": "8.2.3",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.0.0",
     "babel-loader": "^8.0.5",
     "babel-minify-webpack-plugin": "^0.3.1",
-    "clean-webpack-plugin": "^1.0.0",
+    "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^0.28.11",
-    "eslint": "^5.9.0",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.12.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-flowtype": "^3.2.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-react": "^7.12.4",
     "flow-bin": "^0.91.0",
     "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.0.0",
-    "mini-css-extract-plugin": "^0.4.5",
+    "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "script-ext-html-webpack-plugin": "^2.1.3",
-    "style-loader": "0.21.0",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.25.1",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.10",
+    "webpack-dev-server": "^3.1.14",
     "workbox-webpack-plugin": "^3.6.3"
   },
   "keywords": [
