setup auto deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,13 @@ language: node_js
 node_js:
   - "lts/*"
 cache: npm
+before_deploy:
+  - npm run build
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  local_dir: dist
+  on:
+    branch: master
+    tags: true
