fix typescript config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
       "noImplicitAny": true,
       "allowJs": true,
       "allowSyntheticDefaultImports": true,
+      "module": "es2015",
+      "moduleResolution": "node",
       "lib": ["es2015", "dom"],
       "target": "es5",
       "jsx": "react"
