--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "gh-pages": "^3.1.0",
+    "git-revision-webpack-plugin": "^3.0.6",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.9",
